--- a/src/styles/login_page.css
+++ b/src/styles/login_page.css
@@ -7,40 +7,41 @@
 }
 .container_div{
     background-color: #11241a;
+    height: 90%;
 }
 
 .text_color_dark{
     color: #FFFFFF;
 }
-.top_space{
-    padding-top: 25px;
-}
 .top_space2{
-    padding-top: 150px;
+    padding-top: 20%;
+}
+.container_right{
+    width: 100%;
+    height: 100%;
 }
 .container_left{
-    width: 665em !important;
-    height: 497px;
+    width: 1vw;
+    height: 76.9vh;
 }
 .tira_margin {
     margin: 0% !important;
     padding: 0% !important;
 }
-
 .col_left {
-    margin-left: 50px;
+    margin-left: 1vw;
 }
 .col_right {
-    margin-right: 50px;
+    margin-right: 1vw;
 }
 .footer_style {
     background-color: #181a19;
     padding-left: 42%;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 .footer_shadow {
-    box-shadow: 5px 5px 7px 9px rgba(0, 0, 0, 0.493);
+    box-shadow: 5px 5px 7px 5px rgba(0, 0, 0, 0.493);
 }
 .align_text_center{
     text-align: center;
@@ -49,4 +50,12 @@
 }
 .footer_text {
     font-size: 80%;
+}
+.form_align{
+    padding-top: 8%;
+    padding-right: 2.5%;
+}
+.screen{
+    margin: 0px;
+    width: 100%;
 }
