--- a/src/styles/login_page.css
+++ b/src/styles/login_page.css
@@ -2,9 +2,9 @@
 .navbar_default {
     background-color: #181a19 !important;      
 }
-.navbar_shadow {
+/* .navbar_shadow {
     box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.493);
-}
+} */
 .container_div{
     background-color: #11241a;
     height: 90%;
@@ -21,8 +21,7 @@
     height: 100%;
 }
 .container_left{
-    width: 1vw;
-    height: 76.9vh;
+    height: 80vh;
 }
 .tira_margin {
     margin: 0% !important;
@@ -45,7 +44,7 @@
 }
 .align_text_center{
     text-align: center;
-    margin-right: 70%;
+    padding-right: 70%;
     color: #FFFFFF;
 }
 .footer_text {
