--- a/src/styles/login_page.css
+++ b/src/styles/login_page.css
@@ -2,9 +2,9 @@
 .navbar_default {
     background-color: #181a19 !important;      
 }
-/* .navbar_shadow {
+.navbar_shadow {
     box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.493);
-} */
+}
 .container_div{
     background-color: #11241a;
     height: 90%;
