--- a/src/styles/signUpPage.css
+++ b/src/styles/signUpPage.css
@@ -7,3 +7,41 @@
     height: 100%;
     background-color: #11241a;
 }
+.Form_style{
+    padding-bottom: 5%;
+    padding-top: 3%;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+.text_color_dark{
+    color: #FFFFFF;
+}
+.space_between_FN{
+    padding-right: 4%;
+}
+.space_between_LN{
+    padding-left: 4%;
+}
+.text_init{
+    padding-top: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
+    
+}
+.calendar_style{
+    align-self:center ;
+    padding-left: 10%;
+}
+.calendar_container{
+    width: 100%;
+    height: 100%;
+}
+.calendar_block{
+    border-style: solid;
+    border-width: 6.5px;
+    border-radius: 4px;
+    border-color: #FFFFFF;
+}
+.btn_signUp{
+    padding-top: 5%;
+}
