--- a/src/styles/DashboardPage.css
+++ b/src/styles/DashboardPage.css
@@ -29,5 +29,15 @@
     color: #FFFFFF;
 }
 .logout_button {
-    padding-top: 26vw;
+    margin-top: 26vw;
+}
+.titleChallenges{
+    padding-bottom: 1vw;
+}
+.cardsField{
+    margin-top: 2vw;
+    margin-bottom: 2vw;
+}
+.cardSlick {
+    padding-bottom: 5vw;
 }
