--- a/src/styles/AddCards.css
+++ b/src/styles/AddCards.css
@@ -1,8 +1,8 @@
 .backgroundColor {
     background-color: whitesmoke;
     color: black;
-    width: 175px;
-    height: 100px;
+    width: 13vw;
+    height: 6vw;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -18,4 +18,21 @@
 }
 .contentCardAdd{
     text-align: center !important;
+}
+.formContainer{
+    margin-top: 2vw;
+    margin-left: 2vw;
+}
+.descriptionSize{
+    resize: none !important;
+}
+.descriptionContainer{
+    width: 43vw;
+}
+.buttonContainer{
+    margin-top: 10px;
+    margin-left: 80%;
+}
+.labelForm{
+    font-weight: bolder;
 }
