--- a/src/styles/CardSlick.css
+++ b/src/styles/CardSlick.css
@@ -1,14 +1,14 @@
 .background{
     background-color: whitesmoke;
     color: black;
-    width: 20%;
-    height: 20%;    
+    width: 15vw;
+    height: 15vw;    
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 
-    margin-right: 15px ;
+    margin-right: 2vw ;
     align-items: center;
     display: flex;
     flex-direction: row;
@@ -17,29 +17,29 @@
 .titleStyle{
     font-size: 18px;
     font-weight: bolder;
-    padding-bottom: 15px;
+    margin-bottom: 2vw;
 
-    width: 15vw;
+    width: 13vw;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 .contentCard{
-    padding-top: 10px;
-    padding-bottom: 15px;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin-top: 1vw;
+    margin-bottom: 1vw;
+    margin-left: 1vw;
+    margin-right: 1vw;
 }
 
 .description {
-    width: 15vw;
+    width: 13vw;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .details{
-    padding-top: 15px;
+    margin-top: 3vw;
 }
 .cardsContainer{
     margin-right: 3vw;
@@ -53,7 +53,10 @@
 .subtitleDetails{
     font-size: 18px;
     font-weight: bolder;
-    margin-top: 15px;
-    margin-bottom: 10px;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
 
+}
+.grid_cards{
+    margin-bottom: 3vw;
 }
