Modificando estrutura de componentes e subindo metodo de delete

--- a/src/styles/AddCards.css
+++ b/src/styles/AddCards.css
@@ -36,3 +36,9 @@
 .labelForm{
     font-weight: bolder;
 }
+.spaceBetween{
+    margin-left:0;
+    width: 40%;
+    display: flex;
+    justify-content: space-between
+}
